[gd_scene load_steps=2 format=3 uid="uid://b338c6ai1jquw"]

[ext_resource type="Script" uid="uid://c1g8k4j3m7ufc" path="res://ui/dialogs/add_command_dialog/add_command_dialog.gd" id="1_2e5pe"]

[node name="AddCommandDialog" type="Window"]
oversampling_override = 1.0
title = "Add Command"
initial_position = 2
size = Vector2i(400, 500)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_2e5pe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
bbcode_enabled = true
text = "Description"
fit_content = true

[node name="ItemList" type="ItemList" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "OK"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_requested"]
